[tool.poetry]
name = "loadreporter"
version = "0.1.0"
description = "計算機負荷をzeroconfで提供するデーモン"
authors = ["Masakazu Matsumoto <vitroid@gmail.com>"]
readme = "README.md"
packages = [
    { include = "api.py" }
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Operating System :: POSIX :: Linux",
    "Environment :: No Input/Output (Daemon)",
]

[tool.poetry.dependencies]
python = "^3.8"
zeroconf = "*"
fastapi = "*"
uvicorn = "*"
numpy = "*"

[tool.poetry.scripts]
loadreporter = "api:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 